--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 		<!-- endinject -->
 		<!-- inject:js -->
 		<script src="/libs/phaser.min.js"></script>
-		<script src="/js/EnemyController.js"></script>
+		<script src="/js/Controler.js"></script>
+		<script src="/js/Ripple.js"></script>
+		<script src="/js/Wave.js"></script>
+		<script src="/js/WaveController.js"></script>
 		<script src="/js/main.js"></script>
-		<script src="/js/ShipController.js"></script>
 		<!-- endinject -->
   </head>
   <body>
