--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 		<!-- inject:js -->
 		<script src="/libs/phaser.min.js"></script>
 		<script src="/js/Controler.js"></script>
+		<script src="/js/FishingHook.js"></script>
+		<script src="/js/FishingLine.js"></script>
+		<script src="/js/FishingRod.js"></script>
+		<script src="/js/main.js"></script>
 		<script src="/js/Ripple.js"></script>
 		<script src="/js/Wave.js"></script>
 		<script src="/js/WaveController.js"></script>
-		<script src="/js/main.js"></script>
 		<!-- endinject -->
   </head>
   <body>
