--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Game Ban Ruoi</title>
+    <title>Game cau ca</title>
     <style>
       body{
         margin: 0;
