--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 		<!-- inject:css -->
 		<!-- endinject -->
 		<!-- inject:js -->
+		<script src="/libs/jquery.js"></script>
 		<script src="/libs/phaser.min.js"></script>
 		<script src="/js/Controler.js"></script>
 		<script src="/js/FishingHook.js"></script>
 		<script src="/js/FishingLine.js"></script>
 		<script src="/js/FishingRod.js"></script>
-		<script src="/js/main.js"></script>
 		<script src="/js/Ripple.js"></script>
 		<script src="/js/Wave.js"></script>
 		<script src="/js/WaveController.js"></script>
+		<script src="/js/main.js"></script>
+		<script src="/js/EventHandler.js"></script>
 		<!-- endinject -->
   </head>
   <body>
