comment some code

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 		<!-- inject:js -->
 		<script src="/libs/jquery.js"></script>
 		<script src="/libs/phaser.min.js"></script>
-		<script src="/js/Controler.js"></script>
+		<script src="/js/Controller.js"></script>
+		<script src="/js/EventHandler.js"></script>
 		<script src="/js/FishingHook.js"></script>
 		<script src="/js/FishingLine.js"></script>
 		<script src="/js/FishingRod.js"></script>
+		<script src="/js/main.js"></script>
 		<script src="/js/Ripple.js"></script>
 		<script src="/js/Wave.js"></script>
 		<script src="/js/WaveController.js"></script>
-		<script src="/js/main.js"></script>
-		<script src="/js/EventHandler.js"></script>
 		<!-- endinject -->
   </head>
   <body>
