fish and images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<script src="/libs/phaser.min.js"></script>
 		<script src="/js/Controller.js"></script>
 		<script src="/js/EventHandler.js"></script>
+		<script src="/js/Fish.js"></script>
+		<script src="/js/FishController.js"></script>
 		<script src="/js/FishingHook.js"></script>
 		<script src="/js/FishingLine.js"></script>
 		<script src="/js/FishingRod.js"></script>
