--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script src="/js/FishingHook.js"></script>
 		<script src="/js/FishingLine.js"></script>
 		<script src="/js/FishingRod.js"></script>
+		<script src="/js/PowerBar.js"></script>
 		<script src="/js/main.js"></script>
 		<script src="/js/Ripple.js"></script>
 		<script src="/js/Wave.js"></script>
