Add book set score

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<!-- inject:js -->
 		<script src="/libs/jquery.js"></script>
 		<script src="/libs/phaser.min.js"></script>
+		<script src="/js/Book.js"></script>
 		<script src="/js/Controller.js"></script>
 		<script src="/js/EventHandler.js"></script>
 		<script src="/js/Fish.js"></script>
@@ -19,8 +20,9 @@
 		<script src="/js/FishingHook.js"></script>
 		<script src="/js/FishingLine.js"></script>
 		<script src="/js/FishingRod.js"></script>
-		<script src="/js/PowerBar.js"></script>
 		<script src="/js/main.js"></script>
+		<script src="/js/Popup.js"></script>
+		<script src="/js/PowerBar.js"></script>
 		<script src="/js/Ripple.js"></script>
 		<script src="/js/Wave.js"></script>
 		<script src="/js/WaveController.js"></script>
