Set text when miss

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="/js/FishingLine.js"></script>
 		<script src="/js/FishingRod.js"></script>
 		<script src="/js/main.js"></script>
+		<script src="/js/Message.js"></script>
 		<script src="/js/Popup.js"></script>
 		<script src="/js/PowerBar.js"></script>
 		<script src="/js/Ripple.js"></script>
