wheres my brain

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<script src="/js/FishingHook.js"></script>
 		<script src="/js/FishingLine.js"></script>
 		<script src="/js/FishingRod.js"></script>
+		<script src="/js/HookBound.js"></script>
+		<script src="/js/HookTwerk.js"></script>
 		<script src="/js/main.js"></script>
 		<script src="/js/Message.js"></script>
 		<script src="/js/Popup.js"></script>
