fire angle and fire area

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script src="/js/HookBound.js"></script>
 		<script src="/js/HookTwerk.js"></script>
 		<script src="/js/FireAngle.js"></script>
+		<script src="/js/FireAngle2.js"></script>
 		<script src="/js/main.js"></script>
 		<script src="/js/Message.js"></script>
 		<script src="/js/PowerBar.js"></script>
